# aegis

./: .gitignore  CLAUDE.md  pyproject.toml
assets/: README.txt
data/mitre/: attack_chains.json  enterprise-techniques.json
docs/plans/: 2026-02-14-aegis-design.md  2026-02-14-aegis-phase1-implementation.md  2026-02-19-phase11-14-production-design.md  2026-02-23-advanced-detection-design.md  2026-02-23-advanced-detection-implementation.md  2026-02-23-phases-25-27-design.md  2026-02-23-phases-25-27-implementation.md
installer/: aegis-installer.nsi
rules/: behavioral.yaml
rules/lolbins/: lolbins.yaml
rules/playbooks/: network_threat_response.yaml  persistence_response.yaml  ransomware_response.yaml
rules/yara/: ransomware_indicators.yar  suspicious_scripts.yar  webshells.yar
scripts/: build.py  download_feeds.py  install_sysmon.py
src/aegis/: __init__.py  __main__.py
templates/reports/: daily_summary.html  incident_report.html
tests/: conftest.py
tests/test_alerting/: test_alert_manager.py  test_correlation_engine.py  test_incident_store.py
tests/test_core/: test_baseline_scanner.py  test_bus.py  test_config.py  test_coordinator.py  test_dashboard_service.py  test_database.py  test_engine.py  test_engine_integration.py  test_enricher.py  test_health.py  test_main.py  test_models.py  test_scheduler.py  test_service.py  test_sysmon_manager.py  test_transport.py  test_whitelist_manager.py
tests/test_detection/: test_anomaly.py  test_autoencoder.py  test_beacon_detector.py  test_cert_analyzer.py  test_dns_analyzer.py  test_encrypted_traffic.py  (+15 more)
(+183 files in other folders)
